redo join images, fix screen size on ie

--- a/scss/_layout/_screenSize.scss
+++ b/scss/_layout/_screenSize.scss
@@ -21,4 +21,5 @@ main,
 .globalWidth {
     margin-left: auto;
     margin-right: auto;
+    display: block;
 }
