--- a/scss/_pages/_join.scss
+++ b/scss/_pages/_join.scss
@@ -143,13 +143,55 @@
 }
 
 
-/*IMAGES*/
+/*IMAGES
 
 #joinPic img {
     position: relative;
     width: 100%;
     z-index: 1;
     -webkit-filter: brightness(50%);
+}*/
+
+#joinPic {
+    width: 100%;
+    /*JOIN:WIDE SCREEN*/
+    @media only screen and (min-width: 1001px) {
+        height: calc(100vh - 6em);
+    }
+    /*JOIN:NARROW SCREEN*/
+    @media only screen and (max-width: 1000px) {
+        height: calc(100vh - 5em);
+    }
+}
+
+.joinCover {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: brightness(50%);
+    -webkit-filter: brightness(50%);
+    width: 100%;
+    height: 100%;
+}
+
+#joinHomeCover {
+    background-image: url(../contents/joinPictures/join.JPG);
+}
+
+#joinCommunityCover {
+    background-image: url(../contents/joinPictures/communityOutreach.JPG);
+}
+
+#joinElectricalCover {
+    background-image: url(../contents/joinPictures/electrical.JPG);
+}
+
+#joinMechanicalCover {
+    background-image: url(../contents/joinPictures/mechanical.JPG);
+}
+
+#joinProgrammingCover {
+    background-image: url(../contents/joinPictures/programming.JPG);
 }
 
 
